package Backend;

public class InvalidPaymentException extends RuntimeException{
    public InvalidPaymentException(String message){
        super(message);
    }
}
